# exa-cli

./: Cargo.toml  README.md  flake.nix
.dots/: config  exa-cli-76fed236a792997d.md  exa-cli-ebe6eac35b3ea24e.md
.dots/archive/: exa-cli-76fed236a792997d.md  exa-cli-ebe6eac35b3ea24e.md
.github/workflows/: release.yml
scripts/: install.sh
src/: main.rs
